--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <https://cdnjs.com/libraries/modern-normalize>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+        rel="stylesheet" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>WebStudio</title>
@@ -103,7 +103,7 @@
 <h2 class="portfolio-title">Our Portfolio</h2>
 <ul class="portfolio-list">
     <li class="portfolio-card">
-        <img src="images/portf 1.jpg" 
+        <img src="/.images/ 1.jpg" 
         alt="app"
         width="360"
         class="portfolio-image"
@@ -111,7 +111,7 @@
         <p class="card-content">App</p>
     </li>
     <li>
-      <img src="images/portf 2.png"
+      <img src="/.images/portf 2.png"
       alt="terminal and phone"
       width="360"
       class="portfolio-image"
@@ -119,7 +119,7 @@
       <p class="card-content">Marketing</p>
     </li>
     <li>
-        <img src="images/portf 3.jpg"
+        <img src="/.images/portf 3.jpg"
         alt="laptop and phone"
         width="360"
         class="portfolio-image"
@@ -127,7 +127,7 @@
         <p class="card-content">App</p>
     </li>
     <li>
-        <img src="images/portf 4.jpg"
+        <img src="/.images/portf 4.jpg"
         alt="car drive"
         width="360"
         class="portfolio-image"
@@ -135,7 +135,7 @@
         <p class="card-content">Marketing</p>
     </li>
     <li>
-        <img src="images/portf 5.jpg"
+        <img src="./images/portf 5.jpg"
         alt="phone screens"
         width="360"
         class="portfolio-image"
@@ -143,7 +143,7 @@
         <p class="card-content">Design</p>
     </li>
     <li>
-        <img src="images/portf 6.jpg"
+        <img src=./images/portf 6.jpg"
         alt="girl smilling"
         width="360"
         class="portfolio-image"
@@ -153,10 +153,10 @@
 </ul>
 </section>
             </main>
-    <footer>
-    <a href="./index.html" class="logo">WebStudio</a>
+    <footer class="footer">
+    <a class="footer-link" href="./index.html" class="logo">Web<span class="span">Studio</span></a>
 
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     
     
     </footer>
