--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-    <https://cdnjs.com/libraries/modern-normalize>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" rel="stylesheet"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -103,7 +105,7 @@
 <h2 class="portfolio-title">Our Portfolio</h2>
 <ul class="portfolio-list">
     <li class="portfolio-card">
-        <img src="/.images/ 1.jpg" 
+        <img src="/.images/ 1.jpg" />
         alt="app"
         width="360"
         class="portfolio-image"
@@ -111,7 +113,7 @@
         <p class="card-content">App</p>
     </li>
     <li>
-      <img src="/.images/portf 2.png"
+      <img src="/.images/portf 2.png" />
       alt="terminal and phone"
       width="360"
       class="portfolio-image"
@@ -119,7 +121,7 @@
       <p class="card-content">Marketing</p>
     </li>
     <li>
-        <img src="/.images/portf 3.jpg"
+        <img src="/.images/portf 3.jpg" />
         alt="laptop and phone"
         width="360"
         class="portfolio-image"
@@ -127,7 +129,7 @@
         <p class="card-content">App</p>
     </li>
     <li>
-        <img src="/.images/portf 4.jpg"
+        <img src="/.images/portf 4.jpg" />
         alt="car drive"
         width="360"
         class="portfolio-image"
@@ -135,7 +137,7 @@
         <p class="card-content">Marketing</p>
     </li>
     <li>
-        <img src="./images/portf 5.jpg"
+        <img src="./images/portf 5.jpg"/>
         alt="phone screens"
         width="360"
         class="portfolio-image"
@@ -143,7 +145,7 @@
         <p class="card-content">Design</p>
     </li>
     <li>
-        <img src=./images/portf 6.jpg"
+        <img src=./images/portf 6.jpg"/>
         alt="girl smilling"
         width="360"
         class="portfolio-image"
