--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
 </section>
             </main>
     <footer class="footer">
-    <a class="footer-link" href="./index.html" class="logo">Web<span class="span">Studio</span></a>
+    <<a href="./index.html" class="logo">
+            Web<span class="logo-colour">Studio</span></a>
 
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     
