--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <body class="body">
 <header class="header">
           
-            <nav class="header-navigation"> 
-            <a href="./index.html" class="logo">
-            Web<span class="logo-colour">Studio</span></a>
+            <nav class="header-navigation"></nav>  
+            <a href="./index.html" class="logo" />
+            <span class="logo-colour">Studio</span></a>
                 <ul class="header-menu">
                     <li class="header-menu-item"><a class="header-menu-link" href="">Studio</a></li>
                     <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
