--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <h2 class="portfolio-title">Our Portfolio</h2>
 <ul class="portfolio-list">
     <li class="portfolio-card">
-        <img src="/.images/ 1.jpg" />
+        <img src="./images/ 1.jpg" />
         alt="app"
         width="360"
         class="portfolio-image"
@@ -113,7 +113,7 @@
         <p class="card-content">App</p>
     </li>
     <li>
-      <img src="/.images/portf 2.png" />
+      <img src="./images/portf 2.png" />
       alt="terminal and phone"
       width="360"
       class="portfolio-image"
@@ -121,7 +121,7 @@
       <p class="card-content">Marketing</p>
     </li>
     <li>
-        <img src="/.images/portf 3.jpg" />
+        <img src="./images/portf 3.jpg" />
         alt="laptop and phone"
         width="360"
         class="portfolio-image"
@@ -129,7 +129,7 @@
         <p class="card-content">App</p>
     </li>
     <li>
-        <img src="/.images/portf 4.jpg" />
+        <img src="./images/portf 4.jpg" />
         alt="car drive"
         width="360"
         class="portfolio-image"
@@ -145,7 +145,7 @@
         <p class="card-content">Design</p>
     </li>
     <li>
-        <img src=./images/portf 6.jpg"/>
+        <img src=./images/portf 6.jpg" />
         alt="girl smilling"
         width="360"
         class="portfolio-image"
@@ -156,7 +156,7 @@
 </section>
             </main>
     <footer class="footer">
-    <<a href="./index.html" class="logo">
+    <a href="./index.html" class="logo">
             Web<span class="logo-colour">Studio</span></a>
 
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
