--- a/index.html
+++ b/index.html
@@ -105,50 +105,50 @@
 <h2 class="portfolio-title">Our Portfolio</h2>
 <ul class="portfolio-list">
     <li class="portfolio-card">
-        <img src="./images/ 1.jpg" />
+        <img src="./images/portf1.jpg" 
         alt="app"
         width="360"
-        class="portfolio-image"
+        class="portfolio-image" />
         <h3 class="card-title">Banking App</h3> 
         <p class="card-content">App</p>
     </li>
     <li>
-      <img src="./images/portf 2.png" />
+      <img src="./images/portf2.jpg" 
       alt="terminal and phone"
       width="360"
-      class="portfolio-image"
+      class="portfolio-image"/>
       <h3 class="card-title">Cashless Payment</h3>
       <p class="card-content">Marketing</p>
     </li>
     <li>
-        <img src="./images/portf 3.jpg" />
+        <img src="./images/portf3.jpg" 
         alt="laptop and phone"
         width="360"
-        class="portfolio-image"
+        class="portfolio-image" />
         <h3 class="card-title">Meditation App</h3>
         <p class="card-content">App</p>
     </li>
     <li>
-        <img src="./images/portf 4.jpg" />
+        <img src="./images/portf4.jpg" 
         alt="car drive"
         width="360"
-        class="portfolio-image"
+        class="portfolio-image" />
         <h3 class="card-title">Taxi Service</h3>
         <p class="card-content">Marketing</p>
     </li>
     <li>
-        <img src="./images/portf 5.jpg"/>
+        <img src="./images/portf5.jpg"
         alt="phone screens"
         width="360"
-        class="portfolio-image"
+        class="portfolio-image" />
         <h3 class="card-title">Screen Illustrations</h3>
         <p class="card-content">Design</p>
     </li>
     <li>
-        <img src=./images/portf 6.jpg" />
+        <img src=./images/portf6.jpg" 
         alt="girl smilling"
         width="360"
-        class="portfolio-image"
+        class="portfolio-image" />
         <h3 class="card-title">Online Courses</h3>
         <p class="card-content">Marketing</p>
     </li>
