--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <p class="card-content">Design</p>
     </li>
     <li>
-        <img src=./images/portf6.jpg" 
+        <img src="./images/portf6.jpg"
         alt="girl smilling"
         width="360"
         class="portfolio-image" />
