--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <header class="header">
           
             <nav class="header-navigation">  
-                
-            <a href="./index.html" class="logo">
+
+           <a class="logo" href="./index.html">
             Web<span class="logo-colour">Studio</span></a>
                 <ul class="header-menu">
                     <li class="header-menu-item"><a class="header-menu-link" href="">Studio</a></li>
