--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <nav class="header-navigation">  
 
            <a class="logo" href="./index.html">
-            Web<span class="logo-colour">Studio</span></a>
+            "Web"<span class="logo-colour">Studio</span></a>
                 <ul class="header-menu">
-                    <li class="header-menu-item"><a class="header-menu-link" href="">Studio</a></li>
+                    <li class="header-menu-item"><a class="header-menu-link1" href="./index.html">Studio</a></li>
                     <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
                     <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
                 </ul>
