--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="logo-colour">Studio</span>
     </a>
                 <ul class="header-menu">
-                    <li class="header-menu-item"><a class="header-menu-link1" href="./index.html">Studio</a></li>
+                    <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
                     <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
                     <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
                 </ul>
