--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <nav class="header-navigation">  
 
            <a class="logo" href="./index.html">
-            Web
-            <span class="logo-colour">Studio</span>
+            
+        Web<span class="logo-colour">Studio</span>
     </a>
                 <ul class="header-menu">
                     <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
