--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
             </main>
     <footer class="footer">
     <a href="./index.html" class="logo">
-            Web<span class="logo-colour">Studio</span></a>
+            Web<span class="footer-logo-colour">Studio</span>
+        </a>
 
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     
